tests-integration/fixtures/checking/1772566440_derive_newtype_class_not_newtype/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
NotANewtype :: Int -> NotANewtype

Types
NotANewtype :: Type

Derived
derive forall (t :: Type). Newtype @Type NotANewtype (t :: Type)

Roles
NotANewtype = []

Diagnostics
error[ExpectedNewtype]: Expected a newtype, got: NotANewtype
  --> 7:1..7:38
  |
7 | derive instance Newtype NotANewtype _
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
